tests/compile_fail/safe_simd_wrong_token.stderr
error[E0277]: the trait bound `Sse41Token: Has256BitSimd` is not satisfied
  --> tests/compile_fail/safe_simd_wrong_token.rs:11:53
   |
11 |         let _ = archmage::mem::avx::_mm256_loadu_ps(sse41, &data);
   |                 ----------------------------------- ^^^^^ the trait `Has256BitSimd` is not implemented for `Sse41Token`
   |                 |
   |                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `Has256BitSimd`:
             Avx2FmaToken
             Avx2Token
             AvxToken
             X64V3Token
note: required by a bound in `archmage::mem::avx::_mm256_loadu_ps`
  --> src/generated/x86/avx.rs
   |
   | pub fn _mm256_loadu_ps(_token: impl Has256BitSimd, mem_addr: &[f32; 8]) -> __m256 {
   |                                     ^^^^^^^^^^^^^ required by this bound in `_mm256_loadu_ps`
